syntax = "proto3";
package v1;
option go_package = ".;proto_v1";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

message ToDo{
  int64 id=1;
  string title=2;
  string description=3;
  google.protobuf.Timestamp reminder=4;
}

message CreateRequest{
  string api=1;
  ToDo toDo=2;
}

message CreateResponse {
  string api = 1;
  int64 id = 2;
}

message ReadRequest{
  string api=1;
  int64 id=2;
}

message ReadResponse{
  string api=1;
  ToDo toDo=2;
}

message UpdateRequest{
  string api=1;
  ToDo toDo=2;
}

message UpdateResponse{
  string api=1;
  int64 updated=2;
}

message DeleteRequest{
  string api=1;
  int64 id=2;
}

message DeleteResponse{
  string api=1;
  int64 deleted=2;
}

message ReadAllRequest{
  string api=1;
}

message ReadAllResponse{
  string api=1;
  repeated ToDo toDos=2;
}

service ToDoService{
  rpc Create(CreateRequest) returns (CreateResponse){
    option(google.api.http) = {
      post:"/v1/todo"
      body:"*"
    };
  }
  rpc Read(ReadRequest) returns (ReadResponse){
    option(google.api.http) = {
      get:"/v1/todo/{id}"
    };
  }
  rpc ReadAll(ReadAllRequest) returns (ReadAllResponse){
    option(google.api.http) = {
      get:"/v1/todo/all"
    };
  }
  rpc Update(UpdateRequest) returns (UpdateResponse){
    option(google.api.http) = {
      put:"/v1/todo/{toDo.id}"
      body:"*"
      additional_bindings:{
        patch:"/v1/todo/{toDo.id}"
      }
    };
  }
  rpc Delete(DeleteRequest) returns (DeleteResponse){
    option(google.api.http) = {
      delete:"/v1/todo/{id}"
    };
  }
}